Rewrite IndexReader to IndexSearcher in query inheritance tree